--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promilla UB</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <style>
     body {
@@ -134,9 +133,9 @@ input, textarea {
             
             <h1>Promilla</h1>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#features">Product</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">Hjem</a></li>
+                <li><a href="#features">Produkt</a></li>
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
         </div>
     </nav>
