--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ input, textarea {
                 <li><a href="#home">Hjem</a></li>
                 <li><a href="#features">Produkt</a></li>
                 <li><a href="#contact">Kontakt</a></li>
+                <li><a href="salgsvilkar.html">Salgsvilkår</a></li>
             </ul>
         </div>
     </nav>
