--- a/forretningside.html
+++ b/forretningside.html
@@ -214,7 +214,7 @@ input, textarea {
 <body>
     <div class="menu-icon" onclick="toggleNavbar()">☰</div>
     <div class="navbar" id="navbar">
-        <a href="hom.html">Hjem</a>
+        <a href="index.html">Hjem</a>
         <a href="hom.html">Produktet</a>
         <a href="hom.html">Kontakt</a>
         <a href="forretningside.html">Forretningside</a>
