--- a/omoss.html
+++ b/omoss.html
@@ -215,7 +215,7 @@ input, textarea {
     <div class="menu-icon" onclick="toggleNavbar()">☰</div>
 
     <div class="navbar" id="navbar">
-      <a href="hom.html">Hjem</a>
+      <a href="index.html">Hjem</a>
       <a href="hom.html">Produktet</a>
       <a href="hom.html">Kontakt</a>
       <a href="forretningside.html">Forretningside</a>
